includes modified according to grunt

--- a/index.html
+++ b/index.html
@@ -10,10 +10,19 @@
 		<div data-ng-view="">loading...</div>
 	</div>
 	
+	<!-- Production
+	<script src="build/global.min.js"></script>
+	<script src="build/app.min.js"></script>
+	-->
+	<!-- Development (use this after running grunt)
+	<script src="build/global.js"></script>
+	<script src="build/app.js"></script>
+	-->
+	<!-- Development -->
 	<script src="script/vendor/jquery.js"></script>
 	<script src="script/vendor/bootstrap.js"></script>
 	<script src="script/vendor/angular.js"></script>
-  	<script src="script/vendor/angular-route.js"></script>
-	<script src="script/app.js"></script>
+	<script src="script/vendor/angular-route.js"></script>
+	<script src="script/app.js"></script>	
 </body>
 </html>
