footer style, list style

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 		<div class="row" style="padding-top: 53px" data-ng-view="">loading...</div>
 	
 		<footer>
-	        <p>&copy; Copyright 2014 TechAspect</p>
+	        <p><small class="text-muted">&copy; Copyright 2014 TechAspect</small></p>
 	    </footer>
     </div>
 	
