--- a/index.html
+++ b/index.html
@@ -26,6 +26,10 @@
                     <li><a href="#">About</a></li>
                     <li><a href="#">Contact</a></li>
                 </ul>
+                <ul class="nav navbar-nav navbar-right">
+                	<li><a href="#/register">Sign Up</a></li>
+                	<li><a href="#">Log in</a></li>
+                </ul>
             </div>
         </div>
     </nav>
