Added pop up for sign up and added login form...

--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
 	<title>Angular demo</title>
 	<link rel="stylesheet" type="text/css" href="style/vendor/bootstrap.css"/>	
 	<link rel="stylesheet" type="text/css" href="style/taClassified.css"/>	
+	<link rel="stylesheet" type="text/css" href="style/vendor/ngDialog.min.css">
+	<link rel="stylesheet" type="text/css" href="style/vendor/ngDialog-theme-default.css">
 </head>
 <body>
 	<top-nav></top-nav>
@@ -32,5 +34,6 @@
 	<script src="script/vendor/angular.js"></script>
 	<script src="script/vendor/angular-route.js"></script>
 	<script src="script/app.js"></script>
+	<script src="script/vendor/ngDialog.min.js"></script>
 </body>
 </html>
