moved files to respective folders, grunt tasks

--- a/index.html
+++ b/index.html
@@ -3,10 +3,8 @@
 <head>
 	<meta charset="utf-8">
 	<title>Angular demo</title>
-	<link rel="stylesheet" type="text/css" href="style/vendor/bootstrap.css"/>	
-	<link rel="stylesheet" type="text/css" href="style/taClassified.css"/>	
-	<link rel="stylesheet" type="text/css" href="style/vendor/ngDialog.min.css">
-	<link rel="stylesheet" type="text/css" href="style/vendor/ngDialog-theme-default.css">
+	<link rel="stylesheet" type="text/css" href="style/global.css"/>
+	<link rel="stylesheet" type="text/css" href="style/app.css"/>
 </head>
 <body>
 	<top-nav></top-nav>
@@ -20,20 +18,9 @@
 	    </footer>
     </div>
 	
-	<!-- Production
-	<script src="build/global.min.js"></script>
-	<script src="build/app.min.js"></script>
-	-->
-	<!-- Development (use this after running grunt)
-	<script src="build/global.js"></script>
-	<script src="build/app.js"></script>
-	-->
-	<!-- Development -->
-	<script src="script/vendor/jquery.js"></script>
-	<script src="script/vendor/bootstrap.js"></script>
-	<script src="script/vendor/angular.js"></script>
-	<script src="script/vendor/angular-route.js"></script>
+	<!-- Development (use this after running grunt)-->
+	<script src="script/global.js"></script>
 	<script src="script/app.js"></script>
-	<script src="script/vendor/ngDialog.min.js"></script>
+
 </body>
 </html>
